@@ -1,3 +1,8 @@
+2000-05-07  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf-listeners.c: Move struct _GConfListeners
+	into the .c file, eventually need to simply get rid of this.
+
 2000-04-24  Fatih Demir	<kabalak@gmx.net>
 
 	* configure.in : Added tr to ALL_LINGUAS .
